--- a/django-models/LibraryProject/relationship_app/templates/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/library_detail.html
@@ -1,4 +1,4 @@
-<!-- library_detail.html -->
+<!-- relationship_app/templates/relationship_app/library_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +10,9 @@
     <h2>Books in Library:</h2>
     <ul>
         {% for book in library.books.all %}
-        <li>{{ book.title }} by {{ book.author.name }} (Published {{ book.publication_year }})</li>
+        <li>{{ book.title }} by {{ book.author.name }}</li>
         {% endfor %}
     </ul>
 </body>
 </html>
+
